# daq-backup-crilin

./: Makefile  Makefile.am  Makefile.in  README.md  ReleaseNotes  aclocal.m4  config.status  configure  configure.ac  dattoRoot.py  dattoRoot.py~
PLL/: v1742_vcxo468_ref50_pll_out58_dly4n27.rbf  v1742_vcxo468_ref58_pll_out58_dly2n13.rbf  v1742_vcxo468_ref58_pll_out58_dly4n27.rbf
config/: Synctest_Config_test.txt  Synctest_Config_test.txt~
src/: Makefile  Makefile.am  Makefile.in  X742CorrectionRoutines.c  X742CorrectionRoutines.h  paramparser.c  paramparser.c~  paramparser.h  synctest  synctest.c  synctest.c.backup  synctest.c~  synctest.h
src/.deps/: synctest-X742CorrectionRoutines.Po  synctest-paramparser.Po  synctest-synctest.Po
